--- a/frontend/matches.html
+++ b/frontend/matches.html
@@ -101,7 +101,7 @@
     <div id="ticketModalOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:10%; background:rgba(0,0,0,0.8); z-index:2000;"></div>
 
     <div id="ticketModal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; padding:0; z-index:2001;
-     width:800px; height:660px; border-radius:12px; overflow:hidden; display:block; flex-direction:column;">
+     width:800px; height:660px; border-radius:12px; overflow:hidden;flex-direction:column;">
         <div style="position: relative; background: #002F6C; color: white; display: flex; justify-content: center; align-items: center; padding: 0 10px;">
         <h2 id="ticketModalTitle" style="margin: 0px; font-size: 1.5rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 80%;">Select your zone</h2>
         <button onclick="closeTicketModal()" style="position: absolute;background: transparent; right: 15px; top: 50%; transform: translateY(-50); 
