Fixed a visual bug

--- a/frontend/matches.html
+++ b/frontend/matches.html
@@ -110,10 +110,10 @@
 
     <div id="stadium-view" style="flex: 1; padding: 10px; display: flex; justify-content: center; position: relative; overflow-y: auto;">
         <div class="stadium-container">
-            <div class="stand north" onclick="selectZone('North Stand', 50)">North Stand ($50)</div>
-            <div class="stand south" onclick="selectZone('South Stand', 50)">South Stand ($50)</div>
-            <div class="stand east" onclick="selectZone('East Stand', 75)">East Stand ($75)</div>
-            <div class="stand west" onclick="selectZone('West Stand', 100)">West Stand ($100)</div>
+            <div class="stand north" onclick="selectZone('North Stand', 50)">North Stand</div>
+            <div class="stand south" onclick="selectZone('South Stand', 50)">South Stand</div>
+            <div class="stand east" onclick="selectZone('East Stand', 75)">East Stand</div>
+            <div class="stand west" onclick="selectZone('West Stand', 100)">West Stand</div>
             <div class="pitch">Pitch</div>
         </div>
     </div>
